Remove javadoc enable-preview and bump plugin versions