@@ -3,7 +3,7 @@
 
   <groupId>org.avaje</groupId>
   <artifactId>java11-oss</artifactId>
-  <version>4.4</version>
+  <version>4.5</version>
   <packaging>pom</packaging>
   <name>java11-oss</name>
 
@@ -18,12 +18,12 @@
     <nexus.staging.autoReleaseAfterClose>true</nexus.staging.autoReleaseAfterClose>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
-    <maven-javadoc-plugin.version>3.7.0</maven-javadoc-plugin.version>
+    <maven-javadoc-plugin.version>3.10.0</maven-javadoc-plugin.version>
     <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
-    <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
-    <maven-failsafe-plugin.version>3.2.5</maven-failsafe-plugin.version>
-    <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
-    <maven-jar-plugin.version>3.4.1</maven-jar-plugin.version>
+    <maven-surefire-plugin.version>3.5.0</maven-surefire-plugin.version>
+    <maven-failsafe-plugin.version>3.5.0</maven-failsafe-plugin.version>
+    <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
+    <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
   </properties>
 
   <url>https://avaje.io</url>
@@ -134,7 +134,6 @@
             <configuration>
               <release>${java.release}</release>
               <additionalJOption>-Xdoclint:none</additionalJOption>
-              <additionalOptions>--enable-preview</additionalOptions>
             </configuration>
             <executions>
               <execution>
